# OSINT_Agent

./: .gitignore  README.md  app.py  clear_outputs.sh  pyproject.toml  requirements-doc.md  requirements.txt  test_serper.py
investigators/: README.md  pyproject.toml
investigators/src/investigators/: crew.py  main.py
investigators/src/investigators/config/: agents.yaml  tasks.yaml
