[project]
name = "OSINT_Agent"
version = "0.1.0"
description = "Tool for AI-based investigations and KYC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.6",
    "python-dotenv>=1.0.1",
    "crewai[tools]>=0.119.0,<1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
