[project]
name = "investigators"
version = "0.1.0"
description = "investigators using crewAI"
authors = [{ name = "Raz Nissim", email = "raznissim@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
investigators = "investigators.main:run"
run_crew = "investigators.main:run"
train = "investigators.main:train"
replay = "investigators.main:replay"
test = "investigators.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
